--- a/docs/give-a-day.Rmd
+++ b/docs/give-a-day.Rmd
@@ -20,8 +20,8 @@ Since 2019, there have been `r tots['nevent']` Give-A-Day for the Bay volunteer 
 
 ## `r yrsel` Year in Review 
 
-![](https://tbep.org/wp-content/uploads/Give-A-Day-Recap-1.jpg
-)
+![](https://tbep.org/wp-content/uploads/Give-A-Day-Recap-1.jpg){width="80%" style="display: block; margin-left: auto; margin-right: auto;"}
+
 <!-- ```{r, out.width = '80%', fig.height = 17, fig.width = 14}
 gaddat %>% 
   gadsum_fun(yrsel = yrsel) %>% 
